# posthog-autonomy-action

./: .gitignore  Dockerfile  action.yml  pyproject.toml
.claude/commands/: security-audit.md
.github/workflows/: ci.yml  example-reaction-handler.yml  example-usage.yml
src/: config.py  github_client.py  main.py  posthog_client.py
src/analyzer/: feature_classifier.py  instrumentation.py  pr_analyzer.py  product_detector.py
src/code_writer/: analytics_writer.py  committer.py  error_tracking_writer.py  logging_writer.py  writer.py
src/commenter/: pr_comment.py  templates.py
src/creator/: dedup.py  resource_creator.py
src/notifier/: slack.py
src/proposer/: analytics.py  feature_flags.py  llm_analytics.py
tests/: test_analyzer.py  test_code_writer.py  test_creator.py  test_pipeline.py  test_proposer.py  test_templates.py
tests/fixtures/: simple_py_diff.patch  simple_ts_diff.patch
